* include/ruby/intern.h: Remove excess semicolons in PUREFUNC().   Fix failure of TestMkmf::TestConvertible on Solaris with   Oracle Solaris Studio 12. [ruby-dev:49651] [Bug #12470] * internal.h: ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55327 b2dd03c8-39d4-4d8f-98ff-823fe69b080e